# ATI-FT-DAQ-Reader

./: CMakeSettings.json  README.md  measurement.txt  readMeasurement.m  readMeasurement.py
FTReader/: CMakeLists.txt  CMakeSettings.json  FT27374.cal  config.json
FTReader/include/: AtiForceSensor.hpp  Config.hpp  SensorHandler.hpp  atisensor.h
FTReader/src/: AtiForceSensor.cpp  atisensor.cpp  main.cpp
atidaq/: NIDAQmx.h  README.md  aticonvert.h  aticonvert.lib
